force-app/main/default/objects/RelacionVendedorProductoOportunidad__c/RelacionVendedorProductoOportunidad__c.object-meta.xml
<CustomObject>
    <label>Relación Vendedor-Producto Oportunidad</label>
    <nameField>
        <label>Nombre de Relación Vendedor-Producto Opo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relaciones Vendedor-Producto Oportunidad</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>