force-app/main/default/objects/RelacionVendedorProductoOportunidad__c/fields/PorcentajeComision__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeComision__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Porcentaje a aplicar sobre el importe de este producto para este vendedor. Sobre el importe resultante, se aplicará el porcentaje de comisión a conceder</description>
    <label>Porcentaje comisión</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>