force-app/main/default/objects/RelacionVendedorProductoOportunidad__c/fields/ProductoOportunidad__c.field-meta.xml
<CustomField>
    <fullName>ProductoOportunidad__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Producto de oportunidad</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Relaciones Vendedor-Producto Oportunidad</relationshipLabel>
    <relationshipName>RelacionesVendedorProductoOportunidad</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>