force-app/main/default/objects/RelacionVendedorProductoOportunidad__c/fields/Titular__c.field-meta.xml
<CustomField>
    <fullName>Titular__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si este producto contabiliza en los objetivos de este Vendedor</description>
    <label>Titular</label>
    <type>Checkbox</type>
</CustomField>