force-app/main/default/objects/RelacionVendedorProductoOportunidad__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <label>Vendedor</label>
    <referenceTo>Vendedor__c</referenceTo>
    <relationshipLabel>Relaciones Vendedor-Producto Oportunidad</relationshipLabel>
    <relationshipName>RelacionesVendedorProducto_Oportunidad</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>